@@ -1,22 +1,19 @@
 package com.smartcodeltd.jenkinsci.plugins.buildmonitor.viewmodel.syntacticsugar;
 
-import com.google.common.base.Supplier;
 import com.smartcodeltd.jenkinsci.plugins.buildmonitor.facade.RelativeLocation;
 import com.smartcodeltd.jenkinsci.plugins.buildmonitor.viewmodel.JobView;
 import com.smartcodeltd.jenkinsci.plugins.buildmonitor.viewmodel.features.Feature;
 import hudson.model.Job;
-
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-
-import static com.google.common.collect.Lists.newArrayList;
+import java.util.function.Supplier;
 
 public class JobViewRecipe implements Supplier<JobView> {
     private Job<?, ?> job;
     private RelativeLocation relative;
     private Date systemTime = new Date();
-    private List<Feature> features = newArrayList();
+    private List<Feature> features = new ArrayList<>();
     private boolean isPipeline;
 
     public JobViewRecipe of(Job<?, ?> job) {
@@ -26,7 +23,7 @@ public class JobViewRecipe implements Supplier<JobView> {
     }
 
     public JobViewRecipe which(Feature... features) {
-        this.features = Arrays.asList(features);
+        this.features = List.of(features);
         return this;
     }
 
